--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">CapNews</string>
     <string name="title_favorite">Favorite</string>
+    <string name="news">news</string>
 </resources>
